2001-08-31  Nick Clifton  <nickc@cambridge.redhat.com>

	* elflink.h (elf_gc_propagate_vtable_entries_used): Fix off-by-one
	error.

2001-08-30  H.J. Lu  <hjl@gnu.org>

	* elf32-mips.c (mips_elf_calculate_relocation): Revert the last
	2 changes.
	(_bfd_mips_elf_adjust_dynamic_symbol): Allocate dynamic
	relocations for weak definitions.

2001-08-30  H.J. Lu  <hjl@gnu.org>

	* Makefile.am (BFD32_BACKENDS): Add elf32-h8300.lo.
	(BFD32_BACKENDS_CFILES): Add elf32-h8300.c.
	* Makefile.in: Rebuild.

2001-08-30  H.J. Lu  <hjl@gnu.org>

	* elf32-mips.c (mips_elf_calculate_relocation): Don't create
	dynamic relocation for undefined weak symbols when creating
	executables. Check h->root.root.type, instead of h->root.type.

2001-08-29  Joel Sherrill <joel@OARcorp.com>

	* config.bfd (i[3456]86-*-rtems*, m68*-*-rtems*): Change 
	default from coff to elf.

2001-08-29  Jeff Law <law@redhat.com>

	* elf32-h8300.c (h8_elf_howto_table): Add new PC relative
	relocations.
	(h8_reloc_map): Similarly.
	(elf32_h8_final_link_relocate): Remove incorrect overflow tests.
	Add support for PC relative relocations.

	* elf32-h8300.c: Put all prototypes together.
	(elf32_h8_info_to_howto): Parameter elf_reloc is used.
	(elf32_h8_final_link_relocate): New function for linker.
	(elf32_h8_relocate_section): Similarly.
	(elf_backend_relocate_section): Define.

	* cpu-h8300.c (h8300_scan, compatible): Prototype.
	(h8300_scan): Handle architecture:machine encodings typically
	found in linker scripts.
	* elf.c (prep_headers): Do not try to do H8 machine recognition
	here.
	* elf32-h8300.c:  Add some missing prototypes.
	(elf32_h8_mach, elf32_h8_final_write_processing): New functions.
	(elf32_h8_object_p): Similarly.

2001-08-29  Tom Rix <trix@redhat.com>

 	* xcofflink.c (xcoff_link_add_symbols):  Fix XTY_LD symbol that 
 	does not follow a XTY_SD.

2001-08-29  Alan Modra  <amodra@bigpond.net.au>

	* targmatch.sed: Delete case statements.
	* config.bfd <powerpc-*-aix* entry>: Select 64 bit xcoff for